--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,12 @@
   "manifest_version": 3,
   "version": "1.1",
   "name": "Leads tracker",
+  "description": "A simple Chrome extension that helps you save and organize your favorite websites quickly.",
   "action": {
     "default_popup": "index.html",
     "default_icon": "icon.jpg"
   },
   "permissions":[
-    "tabs"
+    "storage","tabs"
   ]
 }
